# confidential-computing-cvm-guest-attestation

client-library/src/Attestation/AttestationClient/: AttestationHelper.h  AttestationHelperBase64.cpp
client-library/src/Attestation/AttestationClient/lib/: AttestationClientImpl.cpp  AttestationClientImpl.h  HttpClient.cpp  HttpClient.h
client-library/src/Attestation/AttestationClient/lib/include/: AttestationClient.h  AttestationLibTypes.h
tdx-attestation-app/: AttestationClientApp.cpp  AttestationClientApp.vcxproj  CMakeLists.txt  README.md  config_amber.json  config_maa.json  install.sh  maa_config.json  main.cpp  packages.config  suse_install.sh
tdx-attestation-app/package/: azguestattestation1-1.0.3-2.x86_64.rpm  azguestattestation1_1.0.3_amd64.deb  azguestattestation1_1.0.5_amd64.deb
tdx-attestation-app/src/: HttpClient.cpp
